# dnhyxc-ai

./: .cz-config.js  .gitignore  README.md  biome.json  commitlint.config.js  docker-compose-prod.yml  docker-compose.yml  latest.json  mark.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json
.changeset/: README.md  config.json
.husky/: commit-msg  pre-commit
.husky-/: pre-commit
.opencode/: config.json
client/: README.md  index.html  latest.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json  desktop.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: clients.rs  commands.rs  dock.rs  event.rs  lib.rs  main.rs  menu.rs  services.rs  tray.rs  types.rs  utils.rs
client/src-tauri/src/command/: common.rs  download.rs
client/src-tauri/src/plugin/: init.rs
client/src-tauri/src/system/: event.rs  menu.rs  mod.rs  shortcut.rs  tray.rs
client/src-tauri/src/types/: common.rs
client/src-tauri/src/utils/: common.rs
docs/: PROJECT-GUIDE.md  README.md  chatbot.md  frontend-tauri-browser-双端运行.md  i18n-zh-en-implementation-guide.md  knowledge-local-folder-and-monaco-sync.md  knowledge-shortcuts.md  knowledge-unauthenticated-local-only.md  markdown-fence-line-parser.md  mermaid-fence-toolbar-sticky.md  mermaid-markdown-zoom-and-preview.md  monaco-clipboard-global-handler-bypass.md  monaco-cut-line-without-selection-cmd-x.md  monaco-editor-tauri-layout.md  monaco-markdown-ime-ghosting.md  product-guide.md  (+12 more)
(+1268 files in other folders)
