[package]
name = "dnhyxc-ai"
version = "0.1.0"
description = "dnhyxc-ai"
authors = ["dnhyxc"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dnhyxc_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
[target."cfg(target_os = \"macos\")".dependencies]
tauri-plugin-http = { version = "2.5.3", features = [
  "unsafe-headers",
  "rustls-tls",
] }

cocoa = "0.26.1"
rfd = "0.16.0"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full", "rt"] }
futures = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2.0.0"
